--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       context: .
       dockerfile: Dockerfile
     env_file: .env
+    environment:
+      DOTNET_DiagnosticPorts: /app/diag/dotnet-monitor.sock
     depends_on:
       - seed
     ports:
@@ -46,13 +48,28 @@ services:
       timeout: 3s
       retries: 10
       start_period: 10s
-    
+  monitor:
+    image: mcr.microsoft.com/dotnet/monitor
+    environment:
+      DOTNETMONITOR_Storage__DefaultSharedPath: /diag
+      DOTNETMONITOR_Metrics__Endpoints: http://+:52325
+      DOTNETMONITOR_Urls: http://+:52323
+      DOTNETMONITOR_DiagnosticPort__ConnectionMode: listen
+      DOTNETMONITOR_DiagnosticPort_EndpointName: /diag/dotnet-monitor.sock
+    command: ["collect", "--no-auth"]
+    volumes:
+      - "./diag:/diag"
+    ports:
+      - "52323:52323"
+      - "52325:52325"
+    depends_on:
+      - app
   send-load-sync:
     # https://github.com/rakyll/hey
     image: williamyeh/hey
     volumes:
       - .:/app
-    command: [ "-n", "1000", "-c", "100", "http://app:8080/v1/diagnostics/sync"  ]
+    command: [ "-n", "10000", "-c", "100", "http://app:8080/v1/diagnostics/sync"  ]
     depends_on:
       app:
         condition: service_healthy
